Fix gap between Information and planter after performing self-check

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -3,6 +3,10 @@ body {
   text-align: center;
 }
 
+.title {
+  margin-bottom: 32px;
+}
+
 .planter {
   display: flex;
   justify-content: center;
